ipc/ipdl/test/ipdl/error/redeclMessage.ipdl
//error: message name `Msg' already declared as `MessageType'
//error: redeclaration of symbol `Msg', first declared at

[ChildProc=any]
protocol redeclMessage {

    // can't declare two messages with the same name

child:
    async Msg();
    async Msg();

};
